# REFace

./: .gitignore  LICENSE  pyproject.toml  train.py
src/configs/: reface.yaml
src/configs/datasets/: dataset.yaml  onebatchtest.yaml
src/configs/metrics/: example.yaml
src/configs/model/: reface.yaml
src/configs/writer/: wandb.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  data_utils.py  ffhq.py  val_img_dataset.py
src/loss/: loss.py
src/model/: __init__.py  ddpm.py  reface.py
src/model/face_model/: arcface.py  helpers.py  model_irse.py  psp_encoders.py
src/model/ldm/: attention.py  unet.py  utils.py
src/trainer/: base_trainer.py  trainer.py
src/utils/: model_utils.py
